[#394] Provide non-reflective access to JVM Attach API on JDK9+