@@ -165,7 +165,7 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
+          <version>3.8.1</version>
         </plugin>
 
         <plugin>
@@ -221,7 +221,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>2.3</version>
+          <version>3.2.4</version>
         </plugin>
 
         <plugin>
@@ -231,7 +231,12 @@
 
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18.1</version>
+          <version>2.22.2</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.22.2</version>
         </plugin>
 
         <plugin>
@@ -580,7 +585,7 @@
       <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
-        <version>4.2</version>
+        <version>4.3</version>
         <scope>test</scope>
       </dependency>
 
@@ -744,6 +749,45 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                 <excludedGroups>java6</excludedGroups>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
+    <profile>
+      <id>java9+</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  --illegal-access=debug
+<!--                  &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens java.management/javax.management.modelmbean=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens jdk.attach/sun.tools.attach=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens java.base/sun.security.tools.keytool=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens java.base/sun.security.x509=ALL-UNNAMED-->
+                </argLine>
+              </configuration>
+            </plugin>
+            <plugin>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  --illegal-access=debug
+<!--                  &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens java.management/javax.management.modelmbean=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens jdk.attach/sun.tools.attach=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens java.base/sun.security.tools.keytool=ALL-UNNAMED-->
+<!--                  &#45;&#45;add-opens java.base/sun.security.x509=ALL-UNNAMED-->
+                </argLine>
               </configuration>
             </plugin>
           </plugins>
